index页面静态完成

--- a/index.html
+++ b/index.html
@@ -3,8 +3,203 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="./lib/mui/css/mui.css">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+<div class="mmm-container">
+  <div class="mui-scroll-wrapper">
+    <div class="mui-scroll">
+      <!--这里放置真实显示的DOM内容-->
 
+      <!----------------------------头部区域-->
+      <div class="mmm-header mui-clearfix">
+        <div class="logo header-left mui-pull-left">
+          <a href="#"><img src="./images/header_logo.png" alt=""></a>
+        </div>
+        <div class="appdown header-right mui-pull-right">
+          <a href="#" class="mui-pull-right"><img src="./images/header_app.png" alt=""></a>
+        </div>
+
+      </div>
+      <!---------------------------搜索区域-->
+      <div class="mmm-search">
+        <input type="text" placeholder="请输入您想比价的商品">
+        <input class="search" type="button" value="搜索">
+
+      </div>
+
+      <!-----------------------------导航区域-->
+      <div class="mmm-nav">
+        <ul class="mui-clearfix">
+          <li><a href="#">
+            <img src="./images/ic_search.png" alt="">
+            <p>比价搜索</p>
+          </a></li>
+          <li><a href="#">
+            <img src="./images/ic_search.png" alt="">
+            <p>比价搜索</p>
+          </a></li>
+          <li><a href="#">
+            <img src="./images/ic_search.png" alt="">
+            <p>比价搜索</p>
+          </a></li>
+          <li><a href="#">
+            <img src="./images/ic_search.png" alt="">
+            <p>比价搜索</p>
+          </a></li>
+          <li><a href="#">
+            <img src="./images/ic_search.png" alt="">
+            <p>比价搜索</p>
+          </a></li>
+          <li><a href="#">
+            <img src="./images/ic_search.png" alt="">
+            <p>比价搜索</p>
+          </a></li>
+        </ul>
+
+
+      </div>
+
+      <!-----------------------------折扣推荐-->
+      <div class="mmm-recommend">
+        <div class="title">
+          <span>超值折扣推荐</span>
+          <a href="#" class="mui-pull-right"><img src="http://www.zuyushop.com/wap/images/more.png">
+          </a>
+        </div>
+        <div class="content">
+          <ul>
+            <li>
+              <a href="#">
+                <div class="left"><img
+                    src="http://cacheimg.manmanbuy.com/r_img/cacheimg.aspx?width=600&imgurl=http://a.manmanbuy.com:8013/cuxiaoPic/201610/201610001412282758.jpg"
+                    alt=""></div>
+                <div class="right">
+                  <p>移动端凑单品：海天 fffffffffffffffffffffffffffffffffffffffffffff鲜味 生抽 1.28L<span>10.9元</span></p>
+                  <div class="other clearfix">
+                    <span class="mall fl">京东商城 | 10-25 14:10</span>
+                    <span class="comment fr"><i class=" mui-icon mui-icon-chatbubble"></i>1</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="left"><img
+                    src="http://cacheimg.manmanbuy.com/r_img/cacheimg.aspx?width=600&imgurl=http://a.manmanbuy.com:8013/cuxiaoPic/201610/201610001412282758.jpg"
+                    alt=""></div>
+                <div class="right">
+                  <p>移动端凑单品：海天 鲜味 生抽 1.28L<span>10.9元</span></p>
+                  <div class="other clearfix">
+                    <span class="mall fl">京东商城 | 10-25 14:10</span>
+                    <span class="comment fr"><i class=" mui-icon mui-icon-chatbubble"></i>1</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="left"><img
+                    src="http://cacheimg.manmanbuy.com/r_img/cacheimg.aspx?width=600&imgurl=http://a.manmanbuy.com:8013/cuxiaoPic/201610/201610001412282758.jpg"
+                    alt=""></div>
+                <div class="right">
+                  <p>移动端凑单品：海天 鲜味 生抽 1.28L<span>10.9元</span></p>
+                  <div class="other clearfix">
+                    <span class="mall fl">京东商城 | 10-25 14:10</span>
+                    <span class="comment fr"><i class=" mui-icon mui-icon-chatbubble"></i>1</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="left"><img
+                    src="http://cacheimg.manmanbuy.com/r_img/cacheimg.aspx?width=600&imgurl=http://a.manmanbuy.com:8013/cuxiaoPic/201610/201610001412282758.jpg"
+                    alt=""></div>
+                <div class="right">
+                  <p>移动端凑单品：海天 鲜味 生抽 1.28L<span>10.9元</span></p>
+                  <div class="other clearfix">
+                    <span class="mall fl">京东商城 | 10-25 14:10</span>
+                    <span class="comment fr"><i class=" mui-icon mui-icon-chatbubble"></i>1</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="left"><img
+                    src="http://cacheimg.manmanbuy.com/r_img/cacheimg.aspx?width=600&imgurl=http://a.manmanbuy.com:8013/cuxiaoPic/201610/201610001412282758.jpg"
+                    alt=""></div>
+                <div class="right">
+                  <p>移动端凑单品：海天 鲜味 生抽 1.28L<span>10.9元</span></p>
+                  <div class="other clearfix">
+                    <span class="mall fl">京东商城 | 10-25 14:10</span>
+                    <span class="comment fr"><i class=" mui-icon mui-icon-chatbubble"></i>1</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="left"><img
+                    src="http://cacheimg.manmanbuy.com/r_img/cacheimg.aspx?width=600&imgurl=http://a.manmanbuy.com:8013/cuxiaoPic/201610/201610001412282758.jpg"
+                    alt=""></div>
+                <div class="right">
+                  <p>移动端凑单品：海天 鲜味 生抽 1.28L<span>10.9元</span></p>
+                  <div class="other clearfix">
+                    <span class="mall fl">京东商城 | 10-25 14:10</span>
+                    <span class="comment fr"><i class=" mui-icon mui-icon-chatbubble"></i>1</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <!--------------------------------更多-->
+      <div class="mmm-more">
+        <div class="content">更多优惠信息>></div>
+      </div>
+
+      <!---------------------------品牌排行-->
+      <div class="mmm-rank">
+        <div class="title">
+          <span>品牌排行</span>
+          <a href="#" class="mui-pull-right"><img src="http://www.zuyushop.com/wap/images/more.png">
+          </a>
+        </div>
+      </div>
+
+      <!---------------------------底部区域-->
+      <div class="mmm-footer">
+        <div class="top">
+          <ul class="clearfix">
+            <li><a href="javascript:;">登录</a></li>
+            <li><a href="javascript:;">注册</a></li>
+            <li><a href="javascript:;"><img src="http://www.zuyushop.com/wap/images/top.jpg" alt="">返回顶部</a></li>
+          </ul>
+        </div>
+        <div class="bottom">
+          <p>
+            <a href="javascript:;" style="color: Red;">手机APP下载</a>
+            <a href="index.html">慢慢买手机版</a> -- 掌上比价平台
+          </p>
+          <p>m.manmanbuy.com</p>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
+</div>
+
+<script src="./lib/zepto/zepto.min.js"></script>
+<script src="./lib/mui/js/mui.js"></script>
+<script src="./js/common.js"></script>
 </body>
 </html>
