--- a/productList.html
+++ b/productList.html
@@ -17,7 +17,7 @@
       <!----------------------------头部区域-->
       <div class="mmm-header mui-clearfix" id="header">
         <div class="logo header-left mui-pull-left">
-          <a href="#"><img src="./images/header_logo.png" alt=""></a>
+          <a href="index.html"><img src="./images/header_logo.png" alt=""></a>
         </div>
         <div class="appdown header-right mui-pull-right">
           <a href="#" class="mui-pull-right"><img src="./images/header_app.png" alt=""></a>
@@ -96,7 +96,8 @@
   <input type="text" value="筛选">
 </script>
 
-<script src="./lib/zepto/zepto.min.js"></script>
+<!--<script src="./lib/zepto/zepto.min.js"></script>-->
+<script src="./lib/jquery-1.12.4.js"></script>
 <script src="./lib/mui/js/mui.js"></script>
 <script src="./lib/artTemplate/template-web.js"></script>
 <script src="./js/common.js"></script>
