--- a/bijia.html
+++ b/bijia.html
@@ -137,8 +137,8 @@
   {{ /each }}
 </script>
 
-
-<script src="./lib/zepto/zepto.min.js"></script>
+<script src="./lib/jquery-1.12.4.js"></script>
+<!--<script src="./lib/zepto/zepto.min.js"></script>-->
 <script src="./lib/mui/js/mui.js"></script>
 <script src="./lib/artTemplate/template-web.js"></script>
 <script src="./js/common.js"></script>
